Bug 1120272 - Expose _aligned_alloc and _aligned_free from mozglue. r=njn